src/objects/ExpoDefine__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>EXPO機能パラメータ定義</description>
    <fields>
        <fullName>ExpoDomain__c</fullName>
        <defaultValue>&quot;https://s3.ap-northeast-1.amazonaws.com/jinya-expo-ui&quot;</defaultValue>
        <inlineHelpText>宿屋EXPOドメインURL(リモートサイト登録不要)</inlineHelpText>
        <label>ExpoDomain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpoImgEndPoint__c</fullName>
        <defaultValue>&quot;https://api.img.jexpo.biz&quot;</defaultValue>
        <inlineHelpText>宿屋EXPOの画像APIのURL(リモートサイトに登録不要)</inlineHelpText>
        <label>ExpoImgEndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceEndpoint__c</fullName>
        <defaultValue>&quot;https://api.jexpo.biz&quot;</defaultValue>
        <inlineHelpText>宿屋EXPOの機能APIのURL(リモートサイトに登録必須)
例：https://api.jexpo.biz</inlineHelpText>
        <label>ExpoApiEndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EXPO設定</label>
</CustomObject>